--- a/templates/alloa_matching/index.html
+++ b/templates/alloa_matching/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <h1>Index Page</h1>
+        <a href = "{% url 'home'%}">Home</a>
         <a href = "{% url 'upload'%}">Upload</a>
     </body>
 </html>
