--- a/templates/alloa_matching/index.html
+++ b/templates/alloa_matching/index.html
@@ -1,7 +1,21 @@
-<html>
-    <body>
-        <h1>Index Page</h1>
-        <a href = "{% url 'home'%}">Home</a>
-        <a href = "{% url 'upload'%}">Upload</a>
-    </body>
-</html>
+{% extends 'alloa_matching/base.html' %}
+{% load staticfiles %}
+
+{% block body_block %}
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    <h1>Login</h1>
+    <form id="login_form" method="post" action="{% url 'index' %}">
+        {% csrf_token %}
+        Username: <input type="text" name="username" value="" size="50" />
+        <br />
+        Password: <input type="password" name="password" value="" size="50" />
+        <br />
+        <input type="submit" value="submit" />
+    </form>
+{% endblock %}
