--- a/templates/alloa_matching/admin_results.html
+++ b/templates/alloa_matching/admin_results.html
@@ -1,14 +1,81 @@
 {% extends 'alloa_matching/base.html' %}
 {% load staticfiles %}
 
-{% block body_block %}
-        <h1>Matching for {{ instance.name }}</h1>
-        {% for student_result in results %}
-            {% for result in student_result %}
-                <p>{{result.student.user_profile.user.first_name}} assigned to {{result.project}} supervised by {{result.academic}}</p>
-            {% endfor %}
-        {% endfor %}
-        {% for result in unmatched %}
-            <p>{{result.user_profile.user.first_name}} is unmatched</p>
-        {% endfor %}
+{% block head_block %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
 {% endblock %}
+
+{% block body_block %}
+    <div style = "margin:20px 0;"><h1>{{ instance.name }} - </h1><h3 class = "stage">Results Available</h3></div>
+    <table id="results" class = "display">
+        <thead>
+            <tr>
+                <th>Student</th>
+                <th>Project</th>
+                <th>Academic</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for student_result in results %}
+                {% for result in student_result %}
+                    <tr>
+                        <td>{{result.student.user_profile.user.email}}</td>
+                        <td>{{result.project}}</td>
+                        <td>{{result.academic.user_profile.user.email}}</td>
+                    </tr>
+                {% endfor %}
+            {% endfor %}
+            {% for result in unmatched %}
+                <tr style="background-color:#ff4d4d;" class = "unmatched">
+                    <td style="background-color:#ff4d4d;">{{result.user_profile.user.email}}</td>
+                    <td>Unmatched</td>
+                    <td>Unmatched</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
+
+{% block script_block %}
+    <script>
+        $(document).ready(function() { 
+            // DataTable
+            $('#results').DataTable();
+        });
+    </script>
+{% endblock %}
+
+{% block style_block %}
+    table{
+        font-family:arial;
+    }
+    .unmatched{
+        color:white;
+    }
+    .container{
+        padding: 0 1%;
+    }
+    .dataTables_wrapper {
+        font-family: arial;
+        font-size: 15px;
+        position: relative;
+        clear: both;
+        *zoom: 1;
+        zoom: 1;
+    }
+    h1,h3{
+        font-family: arial;
+    }
+    h1,.stage{
+        display:inline;
+    }
+    .stage{
+        background-color: green;
+        color: white;
+        padding: 5px;
+        border-radius:5px;
+        vertical-align:4px;
+    }
+{% endblock%}
