--- a/templates/alloa_matching/student_preference.html
+++ b/templates/alloa_matching/student_preference.html
@@ -2,5 +2,5 @@
 {% load staticfiles %}
 
 {% block body_block %}
-        <a href = "{% url 'compute_matching' instance.id %}">Compute Matching</a>
+        <p>Student Preference</p>
 {% endblock %}
