--- a/templates/alloa_matching/upload.html
+++ b/templates/alloa_matching/upload.html
@@ -3,12 +3,9 @@
 
 {% block body_block %}
     <h1>Upload Page</h1>
-    {% if uploaded %}
-        {{ uploaded }}
-    {% endif %}
     <form action="{% url 'upload' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Submit">
+        <input type="submit" name = "full_upload" value="Submit">
     </form>
 {% endblock %}
